sanger/sites/asthma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asthma
spec:
  selector:
    matchLabels:
      app: asthma
  replicas: 1
  template:
    metadata:
      name: asthma
      labels:
        app: asthma
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: asthma-pvc
      containers:
      - image: quay.io/cellgeni/asthma:v0.1.4
        imagePullPolicy: IfNotPresent
        name: asthma
        volumeMounts:
        - name: data
          mountPath: /data
        ports:
        - containerPort: 3838
          hostPort: 3838
          name: asthma
        resources:
          requests:
            memory: "8Gi"
            cpu: 1
          limits:
            memory: "16Gi"
            cpu: 8
        livenessProbe:
          httpGet: 
            path: /
            port: asthma
          initialDelaySeconds: 10
          timeoutSeconds: 20
          periodSeconds: 240
